====== 2008-10-06 libUnihan 0.5.2 released ====
This release provides some improvement feature, such as ZhuYin pseudo field,
 and new unihan_query options:  -O -P -T -Z -z.

====== 2008-09-23 libUnihan 0.5.1 released ====
Can display ZhuYin now.
ZhuYin and PinYin format conversion support.
Correct the counting of FreqRank Field in kMandarinTable.

====== 2008-08-08 libUnihan 0.4.1 released ====
Shows support fields and tables for unihan_query
Header files have moved to {include}/libUnihan.
Completed description: UnihanTable enumeration and str_functions.h
Completed the description of str_functions.h
Uhihan_enum.h and str_functions.h are now in API.

====== 2008-07-01 libUnihan initial public release ====
libUnihan is a Unihan character database in fifth normal form,
as well as corresponding C API.
