@@ -1,69 +1,78 @@
-/usr/share/doc/libUnihan-0.5.0/AUTHORS
-/usr/share/doc/libUnihan-0.5.0/README
-/usr/share/doc/libUnihan-0.5.0/ChangeLog
-/usr/share/doc/libUnihan-0.5.0/NEWS
-/usr/share/doc/libUnihan-0.5.0/COPYING
-/usr/share/doc/libUnihan-0.5.0/COPYING.LESSER
-/usr/share/doc/libUnihan-0.5.0/html/globals_defs.html
-/usr/share/doc/libUnihan-0.5.0/html/tab_r.gif
-/usr/share/doc/libUnihan-0.5.0/html/str__functions_8h-source.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2blank.png
-/usr/share/doc/libUnihan-0.5.0/html/doxygen.png
-/usr/share/doc/libUnihan-0.5.0/html/tabs.css
-/usr/share/doc/libUnihan-0.5.0/html/Unihan__enum_8h-source.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2folderclosed.png
-/usr/share/doc/libUnihan-0.5.0/html/structUnihanIRG__SourceData.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2folderopen.png
-/usr/share/doc/libUnihan-0.5.0/html/globals_vars.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_enum.html
-/usr/share/doc/libUnihan-0.5.0/html/Unihan_8h.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2mlastnode.png
-/usr/share/doc/libUnihan-0.5.0/html/annotated.html
-/usr/share/doc/libUnihan-0.5.0/html/str__functions_8h.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_0x69.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_eval_0x75.html
-/usr/share/doc/libUnihan-0.5.0/html/modules.html
-/usr/share/doc/libUnihan-0.5.0/html/doxygen.css
-/usr/share/doc/libUnihan-0.5.0/html/Unihan_8h-source.html
-/usr/share/doc/libUnihan-0.5.0/html/functions_vars.html
-/usr/share/doc/libUnihan-0.5.0/html/structdatabaseFuncStru.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2link.png
-/usr/share/doc/libUnihan-0.5.0/html/globals_0x7a.html
-/usr/share/doc/libUnihan-0.5.0/html/structUnihanIRG__SourceRec.html
-/usr/share/doc/libUnihan-0.5.0/html/tab_l.gif
-/usr/share/doc/libUnihan-0.5.0/html/ftv2mnode.png
-/usr/share/doc/libUnihan-0.5.0/html/ftv2doc.png
-/usr/share/doc/libUnihan-0.5.0/html/tab_b.gif
-/usr/share/doc/libUnihan-0.5.0/html/ftv2lastnode.png
-/usr/share/doc/libUnihan-0.5.0/html/files.html
-/usr/share/doc/libUnihan-0.5.0/html/structP__Z__Rule.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_func.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2plastnode.png
-/usr/share/doc/libUnihan-0.5.0/html/globals_0x70.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_0x73.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2vertline.png
-/usr/share/doc/libUnihan-0.5.0/html/globals_type.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2pnode.png
-/usr/share/doc/libUnihan-0.5.0/html/Unihan__phonetic_8h.html
-/usr/share/doc/libUnihan-0.5.0/html/group__UnihanQueryOption__group.html
-/usr/share/doc/libUnihan-0.5.0/html/globals.html
-/usr/share/doc/libUnihan-0.5.0/html/functions.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_0x6c.html
-/usr/share/doc/libUnihan-0.5.0/html/index.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_0x75.html
-/usr/share/doc/libUnihan-0.5.0/html/Unihan__enum_8h.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_eval_0x7a.html
-/usr/share/doc/libUnihan-0.5.0/html/ftv2node.png
-/usr/share/doc/libUnihan-0.5.0/html/structStringList.html
-/usr/share/doc/libUnihan-0.5.0/html/globals_eval.html
-/usr/share/doc/libUnihan-0.5.0/html/Unihan__phonetic_8h-source.html
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/bin/unihan_converter
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/bin/unihan_query
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/lib/libUnihan.so.0.5
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/lib/libUnihan.so.0
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/lib/libUnihan.so
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/include/libUnihan/Unihan.h
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/include/libUnihan/Unihan_enum.h
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/include/libUnihan/Unihan_phonetic.h
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/include/libUnihan/str_functions.h
-/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.0-Linux/include/libUnihan/sqlite_functions.h
+/usr/share/doc/libUnihan-0.5.2/AUTHORS
+/usr/share/doc/libUnihan-0.5.2/README
+/usr/share/doc/libUnihan-0.5.2/ChangeLog
+/usr/share/doc/libUnihan-0.5.2/NEWS
+/usr/share/doc/libUnihan-0.5.2/COPYING
+/usr/share/doc/libUnihan-0.5.2/COPYING.LESSER
+/usr/share/doc/libUnihan-0.5.2/html/sqlite__functions_8h-source.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_defs.html
+/usr/share/doc/libUnihan-0.5.2/html/tab_r.gif
+/usr/share/doc/libUnihan-0.5.2/html/str__functions_8h-source.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x64.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2blank.png
+/usr/share/doc/libUnihan-0.5.2/html/doxygen.png
+/usr/share/doc/libUnihan-0.5.2/html/tabs.css
+/usr/share/doc/libUnihan-0.5.2/html/Unihan__enum_8h-source.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2folderclosed.png
+/usr/share/doc/libUnihan-0.5.2/html/structUnihanIRG__SourceData.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2folderopen.png
+/usr/share/doc/libUnihan-0.5.2/html/globals_vars.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_enum.html
+/usr/share/doc/libUnihan-0.5.2/html/Unihan_8h.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2mlastnode.png
+/usr/share/doc/libUnihan-0.5.2/html/annotated.html
+/usr/share/doc/libUnihan-0.5.2/html/str__functions_8h.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x69.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_eval_0x75.html
+/usr/share/doc/libUnihan-0.5.2/html/modules.html
+/usr/share/doc/libUnihan-0.5.2/html/doxygen.css
+/usr/share/doc/libUnihan-0.5.2/html/allocate_8h.html
+/usr/share/doc/libUnihan-0.5.2/html/Unihan_8h-source.html
+/usr/share/doc/libUnihan-0.5.2/html/functions_vars.html
+/usr/share/doc/libUnihan-0.5.2/html/structdatabaseFuncStru.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2link.png
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x7a.html
+/usr/share/doc/libUnihan-0.5.2/html/structUnihanIRG__SourceRec.html
+/usr/share/doc/libUnihan-0.5.2/html/tab_l.gif
+/usr/share/doc/libUnihan-0.5.2/html/allocate_8h-source.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2mnode.png
+/usr/share/doc/libUnihan-0.5.2/html/ftv2doc.png
+/usr/share/doc/libUnihan-0.5.2/html/tab_b.gif
+/usr/share/doc/libUnihan-0.5.2/html/ftv2lastnode.png
+/usr/share/doc/libUnihan-0.5.2/html/files.html
+/usr/share/doc/libUnihan-0.5.2/html/structP__Z__Rule.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_func.html
+/usr/share/doc/libUnihan-0.5.2/html/structSQL__Result.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2plastnode.png
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x70.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x73.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2vertline.png
+/usr/share/doc/libUnihan-0.5.2/html/globals_type.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2pnode.png
+/usr/share/doc/libUnihan-0.5.2/html/sqlite__functions_8h.html
+/usr/share/doc/libUnihan-0.5.2/html/Unihan__phonetic_8h.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x6e.html
+/usr/share/doc/libUnihan-0.5.2/html/group__UnihanQueryOption__group.html
+/usr/share/doc/libUnihan-0.5.2/html/globals.html
+/usr/share/doc/libUnihan-0.5.2/html/functions.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x6c.html
+/usr/share/doc/libUnihan-0.5.2/html/index.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_0x75.html
+/usr/share/doc/libUnihan-0.5.2/html/structDatabaseFuncStru.html
+/usr/share/doc/libUnihan-0.5.2/html/Unihan__enum_8h.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_eval_0x7a.html
+/usr/share/doc/libUnihan-0.5.2/html/ftv2node.png
+/usr/share/doc/libUnihan-0.5.2/html/structStringList.html
+/usr/share/doc/libUnihan-0.5.2/html/globals_eval.html
+/usr/share/doc/libUnihan-0.5.2/html/Unihan__phonetic_8h-source.html
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/bin/unihan_converter
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/bin/unihan_query
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/lib/libUnihan.so.0.5
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/lib/libUnihan.so.0
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/lib/libUnihan.so
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/include/libUnihan/Unihan.h
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/include/libUnihan/Unihan_enum.h
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/include/libUnihan/Unihan_phonetic.h
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/include/libUnihan/allocate.h
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/include/libUnihan/sqlite_functions.h
+/home/dchen/devel/SourceForge/libUnihan/_CPack_Packages/Linux/TGZ/libUnihan-0.5.2-Linux/include/libUnihan/str_functions.h
