@@ -21,13 +21,13 @@ HTML_FILES=*.html
 ALL_FILES= ${JS_FILES} ${CSS_FILES} ${HTML_FILES} api
 
 put:
-	${RSYNC} ${RSYNC_ARGS} ${SSH_ARGS}  ${ALL_FILES} ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS}
+	${RSYNC} ${RSYNC_ARGS} ${SSH_PASS_ARGS}  ${ALL_FILES} ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS}
 
 putClean:
-	${RSYNC} --dry-run ${CLEAN_FLAGS} ${RSYNC_ARGS} ${SSH_ARGS} ../www ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS}
+	${RSYNC} --dry-run ${CLEAN_FLAGS} ${RSYNC_ARGS} ${SSH_PASS_ARGS} ../www ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS}
 
 get:
-	${RSYNC} ${RSYNC_ARGS} ${SSH_ARGS}  ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS} .
+	${RSYNC} ${RSYNC_ARGS} ${SSH_PASS_ARGS}  ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS} .
 getClean:
-	${RSYNC} ${CLEAN_FLAGS} ${RSYNC_ARGS} ${SSH_ARGS}  ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS} ../www
+	${RSYNC} ${CLEAN_FLAGS} ${RSYNC_ARGS} ${SSH_PASS_ARGS}  ${REMOTE_SITE}:${REMOTE_DIR_HTDOCS} ../www
 
