@@ -34,8 +34,10 @@
 		    <dl>
 			<dt style="text-decoration: line-through;">Ver 0.4</dt>
 			<dd style="text-decoration: line-through;">Shows support fields and tables for unihan_query</dd>
-			<dt style="text-decoration: line-through;">Ver 0.5</dt>
+			<dt style="text-decoration: line-through;">Ver 0.5.1</dt>
 			<dd style="text-decoration: line-through;">BoPoMoFo support</dd>
+			<dt style="text-decoration: line-through;">Ver 0.5.2</dt>
+			<dd style="text-decoration: line-through;">Further Phonetics symbol support.</dd>
 			<dt>Ver 0.6</dt>
 			<dd>Lite database version (To be discussed)</dd>
 			<dt>Ver 0.7</dt>
