@@ -114,6 +114,16 @@ themeStart(getLanguageObject("title",getLanguageIndex(preferredLanguage)));
   </div>
   <div id="newsEn" style="position: relative; ">
       <h1>News</h1>
+      <h2>Version 0.5.2 Released: 2008-10-06</h2>
+      <p>This release provides further support of ZhuYin and PinYin, such as ZhuYin pseudo field,
+      and new unihan_query options:  <code>-Z, -z, -P, -p</code>.</p>
+      <p>Now unihan_query is not only capable of showing the result fields, but
+      also showing given fields with <code>-O</code>flags. Thus it will be
+      more convenient for result checking, especially for SQL <code>like</code>
+      queries.</p>
+      <p>Test suite is now introduced into libUnihan. Many bugs have been
+      found with it. :-)</p>
+
       <h2>Version 0.5.1 Released: 2008-09-23</h2>
       <ul>
 	  <li>PinYin and ZhuYin conversion and display support in C and SQL
